<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_currency_popup"
    android:stretchColumns="*">

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_gravity="start"
            android:text="@string/empty_1_char" />

        <TextView android:text="@string/empty_1_char" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_volume_usd_24h" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_24h_volume_usd"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_market_cap_usd" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_market_cap_usd"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_available_supply" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_available_supply"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_total_supply" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_total_supply"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_max_supply" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_max_supply"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_percent_change_1h" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_percent_change_1h"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_percent_change_24h" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_percent_change_24h"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_percent_change_7d" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_percent_change_7d"
            android:layout_gravity="start" />
    </TableRow>

    <TableRow android:layout_width="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/popup_last_updated" />

        <TextView
            android:layout_gravity="start"
            android:text="@string/two_point" />

        <TextView
            android:id="@+id/txt_last_updated"
            android:layout_gravity="start" />
    </TableRow>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/popup_ok_button"
        android:text="@string/ok"
        android:textColor="#fff" />
</TableLayout>